--- a/scenarios/data.meteo.unican.es/templates/server.xml.j2
+++ b/scenarios/data.meteo.unican.es/templates/server.xml.j2
@@ -18,10 +18,7 @@
   <Service name="Catalina">
     <Connector port="{{ item.http }}" protocol="HTTP/1.1" connectionTimeout="20000"
                redirectPort="{{ item.ssl }}"/>
-    <Connector port="{{ item.ajp }}"
-               protocol="AJP/1.3"
-               secretRequired="false"
-               address="{{ ansible_all_ipv4_addresses[0] }}"/>
+    <Connector port="{{ item.ajp }}" protocol="AJP/1.3" />
     <Connector port="{{ item.ssl }}" protocol="org.apache.coyote.http11.Http11Nio2Protocol"
                maxThreads="200" scheme="https"
                secure="True" SSLEnabled="True"
